--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.1",
+    "react-slideshow-image": "^4.2.1",
     "react-use-draggable-scroll": "^0.4.7",
     "sort-by": "^1.2.0",
     "use-http": "^1.0.27"
